Reimplemented BucketMonitor, added AdminActor - will handle admin REST api operations

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -1,4 +1,9 @@
 akka {
 	loglevel = "DEBUG"
-	actor.debug.fsm = true
+	actor {
+	    debug {
+	        receive = true
+	        fsm = true
+        }
+	}
 }
