--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -7,6 +7,6 @@ spray.can {
     }
     host-connector {
         max-redirects = 3
-        pipelining = on
+        //pipelining = on // TODO: test if pipelining works on couchbase
     }
 }
