Basic management REST api support - added actions to create and delete buckets

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -7,3 +7,12 @@ akka {
         }
 	}
 }
+
+rcouch {
+    hosts: [
+        "http://localhost:8091/"
+    ]
+    bucket: geteit
+
+    include "credentials"
+}
