--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,6 +1,7 @@
 akka {
 	loglevel = "DEBUG"
 }
+
 spray.can {
     client {
         response-chunk-aggregation-limit = 0
@@ -9,4 +10,11 @@ spray.can {
         max-redirects = 3
         //pipelining = on // TODO: test if pipelining works on couchbase
     }
+}
+
+rcouch {
+    bucket  = "default"
+    hosts   = []
+    user    = ""
+    passwd  = ""
 }
