--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -1,5 +1,5 @@
 akka {
-	loglevel = "DEBUG"
+	loglevel = "INFO"
 	actor {
 	    debug {
 	        receive = true
@@ -10,7 +10,7 @@ akka {
 
 rcouch {
     hosts: [
-        "http://localhost:8091/"
+        "http://couchvm1:8091/"
     ]
 
     include "credentials"
